--- a/i3/config
+++ b/i3/config
@@ -5,9 +5,7 @@
 # this file and re-run i3-config-wizard(1).
 #
 
-# i3 config file (v4)
-#
-# Please see https://i3wm.org/docs/userguide.html for a complete reference!
+#Mod1lease see https://i3wm.org/docs/userguide.html for a complete reference!
 
 #set $mod Mod4
 set $mod Mod1
@@ -15,7 +13,7 @@ set $mod Mod1
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 #font pango:JetBrainsMono NF  14
-font pango:Cousine Nerd Font Mono 16
+font pango:Cousine Nerd Font Mono 10
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -32,7 +30,7 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
 
-exec /usr/bin/pasystray
+# exec /usr/bin/pasystray
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
@@ -54,7 +52,7 @@ bindsym $mod+Shift+q kill
 # bindsym $mod+d exec dmenu_run
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec rofi -show run -bg "#222222" -fg "#2ECC71" -hlbg "#445544" -hlfg "#2EEE71" -bw 4 -eh 1 -font "Roboto Slab 18" -opacity "80" -lines 8 -line-margin 4 -width 100 -padding 160 -terminal urxvtc
+bindsym $mod+d exec rofi -show run -bg "#222222" -fg "#2ECC71" -hlbg "#445544" -hlfg "#2EEE71" -bw 4 -eh 1 -font "Cousine NF 18" -opacity "80" -lines 8 -line-margin 4 -width 100 -padding 160 -terminal urxvtc
 
 
 # task switcher - rofi
@@ -122,7 +120,7 @@ bindsym $mod+v split v
 bindsym $mod+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
+bindsym $mod+z layout stacking
 bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 
@@ -150,6 +148,8 @@ set $ws7 "7"
 set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
+#set $wsmusic "🎶"
+set $wsmusic "🎧"
 
 # switch to workspace
 bindsym $mod+1 workspace number $ws1
@@ -162,6 +162,7 @@ bindsym $mod+7 workspace number $ws7
 bindsym $mod+8 workspace number $ws8
 bindsym $mod+9 workspace number $ws9
 bindsym $mod+0 workspace number $ws10
+bindsym $mod+m workspace $wsmusic
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace number $ws1
@@ -174,6 +175,7 @@ bindsym $mod+Shift+7 move container to workspace number $ws7
 bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
+bindsym $mod+Shift+m move container to workspace $wsmusic
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -186,14 +188,15 @@ bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 mode "resize" {
         # These bindings trigger as soon as you enter the resize mode
 
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 10 px or 10 ppt
+        # Pressing left will shrink the window’z width.
+        # Pressing right will grow the window’z width.
+        # Pressing up will shrink the window’z height.
+        # Pressing down will grow the window’z height.
+        bindsym h resize shrink width 10 px or 10 ppt
         bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 10 px or 10 ppt
+        bindsym j resize shrink height 10 px or 10 ppt
+        bindsym l resize grow width 10 px or 10 ppt
+        # bindsym semicolon resize grow width 10 px or 10 ppt
 
         # same bindings, but for the arrow keys
         bindsym Left resize shrink width 10 px or 10 ppt
@@ -213,6 +216,8 @@ bindsym $mod+r mode "resize"
 # finds out, if available)
 bar {
         status_command i3status
+        # status_command exec ~/bin/mybar
+        # DejaVu Sans Mono 10
 
   colors {
       focused_workspace  #FFFFFF #FFFFFF #000000
@@ -224,7 +229,7 @@ bar {
 ##client.focused #FFFFFF #F6FFFC #000000 #000000      #FFFFFF
 #
 
-client.focused #000000 #000000 #FFA717 #FFC524   #2C0C93
+client.focused #000000 #000000 #FFA717 #00000   #FFFFFF
 
 # New tiling windows with title bar and borders
 new_window normal 2
@@ -268,3 +273,21 @@ for_window [class="Geary"] border pixel 0
 for_window [class="Lmms"] border pixel 0
 for_window [class="Feh"] border pixel 0
 for_window [class="Konsole"] border pixel 0
+
+
+bindsym $mod+b bar mode toggle
+
+
+
+# Control Music Audio
+# bindsym XF86AudioRaiseVolume exec "amixer -q sset Master,0 1+ unmute"
+# bindsym XF86AudioLowerVolume exec "amixer -q sset Master,0 1- unmute"
+# bindsym XF86AudioMute exec "amixer -q sset Master,0 toggle"
+
+pango.Icon("mdi-music-circle")
+fontprovider.Load("/home/flame/.fonts/")
+
+
+
+# Set Wallpaper
+exec_always feh --bg-scale ~/mywallpapers/akat.png
