--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,34 +1,59 @@
-set -g prefix C-a
-setw -g automatic-rename
-unbind j
-unbind C-b # unbind default leader key
+# set scroll history to 100,000 lines
+set-option -g history-limit 100000
+
+# modern colors
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",alacritty:Tc"
+
+# unbind the prefix and bind it to Ctrl-a like screen
+unbind C-b
+set -g prefix `
+bind-key ` last-window
+bind-key e send-prefix
+
+# copy to X clipboard
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe 'xclip -in -selection clipboard &> /dev/null'
+bind -T copy-mode-vi Enter send-keys -X cancel
+
+# shortcut for moving tmux buffer to clipboard
+# useful if you've selected with the mouse
+bind-key -nr C-y run "tmux show-buffer | xclip -in -selection clipboard &> /dev/null"
+
+# Avoid ESC delay
+set -s escape-time 0
+
+# Fix titlebar
+set -g set-titles on
+set -g set-titles-string "#T"
+
+# VIM mode
+set -g mode-keys vi
+
+# Mouse friendly
+set -g mouse on
+
+# Move between panes with vi keys
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+######################
+### DESIGN CHANGES ###
+######################
+
+# Avoid date/time taking up space
+set -g status-right ''
+set -g status-right-length 0
+
+
+
 unbind '"' # unbind horizontal split
 unbind %   # unbind vertical split
 
-bind-key r source-file ~/.tmux.conf
-bind-key c split-window -v # split pane horizontally
-bind-key v split-window -h # split pane vertically
-bind-key Space list-panes
-bind-key Enter break-pane
-bind-key Space command-prompt "joinp -t:%%" # %% = prompt for window.pane [-V|H] # vert|hor split
-bind-key -n C-up prev
-bind-key -n C-left prev
-bind-key -n C-right next
-bind-key -n C-down next
-bind C-c new-window
-bind C-j previous-window
-bind C-k next-window
-bind A command-prompt "rename-window %%"
-setw -g aggressive-resize on
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
-bind-key -r C-h resize-pane -L
-bind-key -r C-j resize-pane -D
-bind-key -r C-k resize-pane -U
-bind-key -r C-l resize-pane -R
-bind o select-layout "active-only"
-bind M-- select-layout "even-vertical"
-bind M-| select-layout "even-horizontal"
-bind M-r rotate-window
+# split current window horizontally
+bind-key - split-window -v
+# split current window vertically
+bind-key = split-window -h
+#source-file ~/dev/others/base16/templates/tmux/colors/base16-gruvbox-dark-hard.conf
