--- a/i3/config
+++ b/i3/config
@@ -13,7 +13,7 @@ set $mod Mod1
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 #font pango:JetBrainsMono NF  14
-font pango:Envy Code R 14
+font pango:Iosevka 14
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -52,7 +52,7 @@ bindsym $mod+Shift+q kill
 # bindsym $mod+d exec dmenu_run
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec rofi -show run -bg "#222222" -fg "#2ECC71" -hlbg "#445544" -hlfg "#2EEE71" -bw 4 -eh 1 -font "Envy Code R 18" -opacity "80" -lines 8 -line-margin 4 -width 100 -padding 160 -terminal urxvtc
+bindsym $mod+d exec rofi -show run -bg "#222222" -fg "#2ECC71" -hlbg "#445544" -hlfg "#2EEE71" -bw 4 -eh 1 -font "Iosevka 18" -opacity "80" -lines 8 -line-margin 4 -width 100 -padding 160 -terminal urxvtc
 
 
 # task switcher - rofi
@@ -65,7 +65,7 @@ bindsym Mod1+Tab \
   -bg        "#222222"  -fg        "#2ECC71" \
   -hlbg      "#2ECC71"  -hlfg      "#222222" \
   -bg-active "#222222"  -fg-active "#2288DD" \
-  -font      "Envy Code R 12"   -opactiy 80
+  -font      "Iosevka 12"   -opactiy 80
 
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
@@ -241,7 +241,7 @@ hide_edge_borders both
 
 # Set variables for floating and un-floating commands
 set $FLOAT floating enable, border normal 0
-set $UNFLOAT floating disable, border normal 2
+set $UNFLOAT floating disable, border normal 0
 
 # Key bindings
 # Switch between tiling and floating layer (Super+Space)
@@ -262,7 +262,7 @@ bindcode Mod4+Control+65 $UNFLOAT
 new_window normal
 hide_edge_borders vertical
 bindsym Control+Shift+x [class="^.*"] border toggle
-for_window [class="^.*"] border pixel 1
+for_window [class="^.*"] border pixel 0
 for_window [class="URxvt"] border normal
 for_window [class="Leafpad"] border normal
 for_window [class="Lxappearance"] border normal
@@ -274,6 +274,10 @@ for_window [class="Geary"] border pixel 0
 for_window [class="Lmms"] border pixel 0
 for_window [class="Feh"] border pixel 0
 for_window [class="Konsole"] border pixel 0
+for_window [class="Alacritty"] border pixel 0
+for_window [class="Nightly"] border pixel 0
+for_window [class="Chromium"] border pixel 0
+for_window [class="Code"] border pixel 0
 
 
 bindsym $mod+b bar mode toggle
