--- a/i3/config
+++ b/i3/config
@@ -10,6 +10,10 @@
 #set $mod Mod4
 set $mod Mod1
 
+# gap
+gaps inner 15
+gaps outer 15
+
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 #font pango:JetBrainsMono NF  14
@@ -233,11 +237,11 @@ bar {
 client.focused #000000 #000000 #FFA717 #00000   #FFFFFF
 
 # New tiling windows with title bar and borders
-new_window normal 2
+new_window normal
 # New floating windows with title bar and without borders
-new_float normal 0
+new_float normal
 # Hide borders on edges
-hide_edge_borders both
+# hide_edge_borders both
 
 # Set variables for floating and un-floating commands
 set $FLOAT floating enable, border normal 0
@@ -252,15 +256,23 @@ bindcode Mod4+Shift+65 $FLOAT
 bindcode Mod4+Control+65 $UNFLOAT
 
 # # Auto-float some windows
-# for_window [class="SomeClass"] $FLOAT
-# for_window [title="ThisTitle"] $FLOAT
+ for_window [class="SomeClass"] $FLOAT
+ for_window [title="ThisTitle"] $FLOAT
 # # Auto-un-float some other windows
-# for_window [class="SomeOtherClass" window_type="dialog"] $UNFLOAT
-# for_window [title="ThatTitle"] $UNFLOAT
+ for_window [class="SomeOtherClass" window_type="dialog"] $UNFLOAT
+ for_window [title="ThatTitle"] $UNFLOAT
+
+
+# switch to workspace with urgent window
+for_window [urgent="latest"] focus
+focus_on_window_activation   focus
+
+default_orientation horizontal
 
 # border / titlebar
 new_window normal
-hide_edge_borders vertical
+new_float normal
+hide_edge_borders both
 bindsym Control+Shift+x [class="^.*"] border toggle
 for_window [class="^.*"] border pixel 0
 for_window [class="URxvt"] border normal
@@ -290,6 +302,17 @@ bindsym $mod+b bar mode toggle
 # bindsym XF86AudioMute exec "amixer -q sset Master,0 toggle"
 
 
-
+popup_during_fullscreen smart
 # Set Wallpaper
 #
+#
+
+# Set Key to US
+exec setxkbmap us
+exec setxkbmap -option caps:swapescape
+
+# auto exec Chrome
+exec chromium
+
+# Start libinput-gesture
+exec libinput-gestures
