--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -61,3 +61,11 @@ bind o select-layout "active-only"
 bind M-- select-layout "even-vertical"
 bind M-| select-layout "even-horizontal"
 bind M-r rotate-window
+
+
+# Vim Mode Copy/Paste
+bind P paste-buffer
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection
+bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
+
