--- a/picom.conf
+++ b/picom.conf
@@ -6,19 +6,19 @@ corner-radius = 19.0;
 round-borders = 9;
 
 # general settings
-experimental-backends = true;
-# backend = "glx";
+#experimental-backends = true;
+backend = "glx";
 # vsync = true
 detect-rounded-corners = true;
 # detect-client-opacity = true;
 
 
 backend = "glx";
-glx-no-stencil = true;
-glx-no-rebind-pixmap = true;
+#glx-no-stencil = true;
+#glx-no-rebind-pixmap = true;
 
-vsync = "false";
-paint-on-overlay = true;
+#vsync = "false";
+#paint-on-overlay = true;
 #############
 ## SHADOW
 #############
@@ -68,49 +68,49 @@ paint-on-overlay = true;
 inactive-opacity = 0.90;
 active-opacity = 1;
 # active-opacity = 0.93;
-frame-opacity = 1;
-inactive-opacity-override = false;
-inactive-dim = 0.05;
+#frame-opacity = 1;
+#inactive-opacity-override = false;
+#inactive-dim = 0.05;
 # inactive-dim-fixed = true;
 
-opacity-rule = [
-  "100:class_g *?= 'virt-manager'",
-  "100:class_g *?= 'PPSSPPSDL'",
-  "100:class_g *?= 'retroarch'",
-  "100:class_g *?= 'minetest'",
-  "100:class_g *?= 'dolphin-emu'",
-  "100:class_g *?= 'teams'",
-  "100:class_g *?= 'kawanime'",
-  "100:class_g *?= 'freezer'",
-  "100:class_g *?= 'zoom'",
-  "100:class_g *?= 'firefox'",
-  "100:class_g *?= 'signal'",
-  "100:class_g *?= 'chromium'",
-  "100:class_g *?= 'mullvad'",
-  "100:class_g *?= 'freetube'",
-  "100:class_g *?= 'onlyoffice-desktopeditors'",
-  "100:class_g *?= 'librewolf'",
-  "100:class_g *?= 'Deezloader'",
-  "100:class_g *?= 'runelite'",
-  "100:class_g *?= 'com.github.needleandthread.vocal'",
-  "100:class_g *?= 'xonotic-sdl'",
-  "100:class_g *?= 'openrct2'",
-  "100:class_g *?= 'Parkitect.x86_64'",
-  "100:class_g *?= 'kodi'",
-  "100:class_g *?= 'PCSX2'",
-  "100:name *?= 'mpv' && focused",
-  "100:name *?= 'mpv' && !focused",
-  "100:name *?= 'sxiv' && focused",
-  "100:name *?= 'sxiv' && !focused",
-  "100:name *?= 'ueberzug'",
-];
+#opacity-rule = [
+#  "100:class_g *?= 'virt-manager'",
+#  "100:class_g *?= 'PPSSPPSDL'",
+#  "100:class_g *?= 'retroarch'",
+#  "100:class_g *?= 'minetest'",
+#  "100:class_g *?= 'dolphin-emu'",
+#  "100:class_g *?= 'teams'",
+#  "100:class_g *?= 'kawanime'",
+#  "100:class_g *?= 'freezer'",
+#  "100:class_g *?= 'zoom'",
+#  "100:class_g *?= 'firefox'",
+#  "100:class_g *?= 'signal'",
+#  "100:class_g *?= 'chromium'",
+#  "100:class_g *?= 'mullvad'",
+#  "100:class_g *?= 'freetube'",
+#  "100:class_g *?= 'onlyoffice-desktopeditors'",
+#  "100:class_g *?= 'librewolf'",
+#  "100:class_g *?= 'Deezloader'",
+#  "100:class_g *?= 'runelite'",
+#  "100:class_g *?= 'com.github.needleandthread.vocal'",
+#  "100:class_g *?= 'xonotic-sdl'",
+#  "100:class_g *?= 'openrct2'",
+#  "100:class_g *?= 'Parkitect.x86_64'",
+#  "100:class_g *?= 'kodi'",
+#  "100:class_g *?= 'PCSX2'",
+#  "100:name *?= 'mpv' && focused",
+#  "100:name *?= 'mpv' && !focused",
+#  "100:name *?= 'sxiv' && focused",
+#  "100:name *?= 'sxiv' && !focused",
+#  "100:name *?= 'ueberzug'",
+#];
 
 #############
 ## FADING
 #############
-fading = true;
-fade-delta = 15;
-fade-in-step = 0.05;
-fade-out-step = 0.05;
-no-fading-openclose = false;
-fade-exclude = [ ];
+#fading = true;
+#fade-delta = 15;
+#fade-in-step = 0.05;
+#fade-out-step = 0.05;
+#no-fading-openclose = false;
+#fade-exclude = [ ];
