--- a/picom.conf
+++ b/picom.conf
@@ -6,18 +6,21 @@ corner-radius = 19.0;
 round-borders = 9;
 
 # general settings
-#experimental-backends = true;
+experimental-backends = true;
 backend = "glx";
-# vsync = true
+#########################
+glx-no-stencil = true;	# Might for nvidia driver if lag need to remove 
+glx-copy-from-front = false;
+##########################
 detect-rounded-corners = true;
 # detect-client-opacity = true;
 
 
-backend = "glx";
-#glx-no-stencil = true;
-#glx-no-rebind-pixmap = true;
+glx-no-rebind-pixmap = true;
 
-#vsync = "false";
+refresh-rate = 0;
+
+vsync = true;
 #paint-on-overlay = true;
 #############
 ## SHADOW
@@ -65,45 +68,51 @@ backend = "glx";
 #############
 ## OPACITY
 #############
-inactive-opacity = 0.90;
-active-opacity = 1;
+#inactive-opacity = 0.90;
+#active-opacity = 1;
 # active-opacity = 0.93;
 #frame-opacity = 1;
 #inactive-opacity-override = false;
 #inactive-dim = 0.05;
 # inactive-dim-fixed = true;
 
-#opacity-rule = [
-#  "100:class_g *?= 'virt-manager'",
-#  "100:class_g *?= 'PPSSPPSDL'",
-#  "100:class_g *?= 'retroarch'",
-#  "100:class_g *?= 'minetest'",
-#  "100:class_g *?= 'dolphin-emu'",
-#  "100:class_g *?= 'teams'",
-#  "100:class_g *?= 'kawanime'",
-#  "100:class_g *?= 'freezer'",
-#  "100:class_g *?= 'zoom'",
-#  "100:class_g *?= 'firefox'",
-#  "100:class_g *?= 'signal'",
-#  "100:class_g *?= 'chromium'",
-#  "100:class_g *?= 'mullvad'",
-#  "100:class_g *?= 'freetube'",
-#  "100:class_g *?= 'onlyoffice-desktopeditors'",
-#  "100:class_g *?= 'librewolf'",
-#  "100:class_g *?= 'Deezloader'",
-#  "100:class_g *?= 'runelite'",
-#  "100:class_g *?= 'com.github.needleandthread.vocal'",
-#  "100:class_g *?= 'xonotic-sdl'",
-#  "100:class_g *?= 'openrct2'",
-#  "100:class_g *?= 'Parkitect.x86_64'",
-#  "100:class_g *?= 'kodi'",
-#  "100:class_g *?= 'PCSX2'",
-#  "100:name *?= 'mpv' && focused",
-#  "100:name *?= 'mpv' && !focused",
-#  "100:name *?= 'sxiv' && focused",
-#  "100:name *?= 'sxiv' && !focused",
-#  "100:name *?= 'ueberzug'",
-#];
+inactive-opacity = 1;
+active-opacity = 1;
+frame-opacity = 1;
+inactive-opacity-override = false;
+
+
+opacity-rule = [
+  "100:class_g *?= 'virt-manager'",
+  "100:class_g *?= 'PPSSPPSDL'",
+  "100:class_g *?= 'retroarch'",
+  "100:class_g *?= 'minetest'",
+  "100:class_g *?= 'dolphin-emu'",
+  "100:class_g *?= 'teams'",
+  "100:class_g *?= 'kawanime'",
+  "100:class_g *?= 'freezer'",
+  "100:class_g *?= 'zoom'",
+  "100:class_g *?= 'firefox'",
+  "100:class_g *?= 'signal'",
+  "100:class_g *?= 'chromium'",
+  "100:class_g *?= 'mullvad'",
+  "100:class_g *?= 'freetube'",
+  "100:class_g *?= 'onlyoffice-desktopeditors'",
+  "100:class_g *?= 'librewolf'",
+  "100:class_g *?= 'Deezloader'",
+  "100:class_g *?= 'runelite'",
+  "100:class_g *?= 'com.github.needleandthread.vocal'",
+  "100:class_g *?= 'xonotic-sdl'",
+  "100:class_g *?= 'openrct2'",
+  "100:class_g *?= 'Parkitect.x86_64'",
+  "100:class_g *?= 'kodi'",
+  "100:class_g *?= 'PCSX2'",
+  "100:name *?= 'mpv' && focused",
+  "100:name *?= 'mpv' && !focused",
+  "100:name *?= 'sxiv' && focused",
+  "100:name *?= 'sxiv' && !focused",
+  "100:name *?= 'ueberzug'",
+];
 
 #############
 ## FADING
@@ -114,3 +123,26 @@ active-opacity = 1;
 #fade-out-step = 0.05;
 #no-fading-openclose = false;
 #fade-exclude = [ ];
+
+
+# menu        = { shadow = false; };
+dropdown_menu = { shadow = false; };
+popup_menu    = { shadow = false; };
+utility       = { shadow = false; };
+
+
+opacity-rule = [ "100:_NET_WM_STATE@[0]:32a = '_NET_WM_STATE_FULLSCREEN'",
+"100:_NET_WM_STATE@[1]:32a = '_NET_WM_STATE_FULLSCREEN'",
+"100:_NET_WM_STATE@[2]:32a = '_NET_WM_STATE_FULLSCREEN'",
+"100:_NET_WM_STATE@[3]:32a = '_NET_WM_STATE_FULLSCREEN'",
+"100:_NET_WM_STATE@[4]:32a = '_NET_WM_STATE_FULLSCREEN'" ];
+
+unredir-if-possible = true;
+
+no-ewmh-fullscreen = true;
+detect-transient = false
+
+
+
+#  For Nvidia-user
+xrender-sync-fence = true;
