--- a/.screenrc
+++ b/.screenrc
@@ -13,6 +13,21 @@ escape `e
 # Window list at the bottom. hostname, centered tabs and redmarked active windows:
 #shelltitle '$ |'
 hardstatus alwayslastline
-hardstatus string '%{= kG}[ %{G}%H %{g}][%= %{= kw}%?%-Lw%?%{r}(%{W}%n*%f%t%?(%u)%?%{r})%{w}%?%+Lw%?%? %= %{g}][%{B} %m/%d %{W}%c %{g}]'
 
+hardstatus string "%H %n%?: %t%? %h"
 defscrollback 50000
+
+defutf8 on
+defflow off
+vbell off
+autodetach on
+startup_message off
+defscrollback 10000
+term screen-256color
+termcapinfo screen* ks@:ke@
+termcapinfo screen* 'hs:ts=\E]2;:fs=\007:ds=\E]2;screen\007'
+termcapinfo xterm* 'hs:ts=\E]2;:fs=\007:ds=\E]2;screen\007'
+attrcolor b ".I"
+defbce "on"
+caption always "%{= bW} %{Y}%H%{-} %?%-Lw%?%{M}{%{Y}%n%f %{-}%{C}%t%{-}}%{-}%?%+Lw%?%= %{d}%?%{C}[%{W}%t %h%{-}] %?"
+
