--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,8 +1,22 @@
 # rebind prefix to C-a
-set-option -g prefix `
+# set-option -g prefix `
+# set-option -g prefix2 C-a
+# bind-key ` last-window
+# bind-key e send-prefix
+
+
+# set-option -g prefix Tab
+# set-option -g prefix2 C-a
+# bind-key Tab last-window
+# bind-key e send-prefix
+
+
+set-option -g prefix C-l
 set-option -g prefix2 C-a
-bind-key ` last-window
+bind-key C-l last-window
 bind-key e send-prefix
+
+bind-key M-c new-window -a
 
 # vim mode
 setw -g mode-keys vi
@@ -58,11 +72,11 @@ bind-key Enter break-pane
 
 bind-key Space command-prompt "joinp -t:%%" # %% = prompt for window.pane [-V|H] # vert|hor split
 bind-key -n C-up prev
-bind-key -n C-left prev
-bind-key -n C-right next
+bind-key -n M-h prev
+bind-key -n M-l next
 bind-key -n C-down next
 
-bind C-c new-window
+bind-key -n M-c new-window
 bind C-j previous-window
 bind C-k next-window
 
@@ -80,6 +94,7 @@ bind o select-layout "active-only"
 bind M-- select-layout "even-vertical"
 bind M-| select-layout "even-horizontal"
 bind M-r rotate-window
+
 
 # Vim Mode Copy/Paste
 # bind P paste-buffer
